@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix bug #1696810: skill items autoapply. Now skilltool will be used even if
+skill can be used without, to benefit from its bonuses.
+ server/skill_util.c
+Nicolas Weeger 2007-04-10
+
 Fix parameter for Doxygen, no functional change.
  plugins/common/plugin_common.c
  plugins/common/include/plugin_common.h
